feat(sveltekit): implement form controls

--- a/sveltekit/src/app.html
+++ b/sveltekit/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-full overflow-hidden">
     <head>
-        <title>Daoism - Go with the Flow (of Votes!)</title>
+        <title>Botoken</title>
         %sveltekit.head%
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
