feat(seo): provide basic OpenGraph protocol data

--- a/sveltekit/src/app.html
+++ b/sveltekit/src/app.html
@@ -3,6 +3,16 @@
     <head>
         <title>Botoken</title>
         %sveltekit.head%
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Botoken" />
+        <meta
+            property="og:description"
+            content="A simple Ethereum-based polling system for decentralized autonomous organizations (DAOs)."
+        />
+        <meta
+            name="description"
+            content="A simple Ethereum-based polling system for decentralized autonomous organizations (DAOs)."
+        />
         <link rel="manifest" href="/manifest.json" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
